correcting path of data file

--- a/2 - Gradient Boosting/01 - Introduction to XGBoost.ipynb
+++ b/2 - Gradient Boosting/01 - Introduction to XGBoost.ipynb
@@ -64,9 +64,14 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
    "source": [
     "!pip install xgboost -U"
    ]
@@ -274,7 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdss_df = pd.read_csv('Skyserver_SQL2_27_2018 6_51_39 PM.csv', skiprows=1)\n",
+    "url = \"https://raw.githubusercontent.com/a3lentyr/machine-learning-short/main/2%20-%20Gradient%20Boosting/Skyserver_SQL2_27_2018%206_51_39%20PM.csv\"\n",
+    "#sdss_df = pd.read_csv('Skyserver_SQL2_27_2018 6_51_39 PM.csv', skiprows=1)\n",
+    "sdss_df = pd.read_csv(url, skiprows=1)\n",
     "sdss_df.head()"
    ]
   },
@@ -713,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
